--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+        color: #888888;
+        background-color: #d8dfff;
+        border-color: #a8b7f9;
+    
+}
+
+.nav-tabs {
+    --bs-nav-tabs-border-radius: 0rem !important;
+
+}
+
+.nav-link {
+   
+    color: #a8b7f9;
+   
+}
+
