--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -29,3 +29,23 @@
     margin-bottom: 10px;
     font-weight: 600;
   }
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+  }
+  
+  button {
+    padding: 10px 20px;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  
+  input {
+    text-align: center;
+    width: 50px;
+    font-size: 20px;
+    margin: 0 10px;
+  }
+  
