--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -57,6 +57,21 @@
           </div>
         </div>
       </div>
+      <div class="container mt-5">
+        <div class="row justify-content-center">
+          <div class="col-auto">
+            <div class="input-group">
+              <button class="btn btn-primary" (click)="decrement()" [disabled]="number <= rangesData.baseValue">-</button>
+              <input type="number" class="form-control text-center" [(ngModel)]="number" readonly>
+              <button class="btn btn-primary" (click)="increment()" [disabled]="number >= rangesData.data[rangesData.data.length - 1].max - getStep()">+</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      
+      
+      
     </main>
   </div>
 </div>
