--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -61,9 +61,9 @@
         <div class="row justify-content-center">
           <div class="col-auto">
             <div class="input-group">
-              <button class="btn btn-primary" (click)="decrement()" [disabled]="number <= baseValue || !rangesData.length">-</button>
+              <button class="btn btn-primary" (click)="decrement()" [disabled]="number <= baseValue">-</button>
               <input type="number" class="form-control text-center" [(ngModel)]="number" readonly>
-              <button class="btn btn-primary" (click)="increment()" [disabled]=" number >= rangesData[rangesData.length - 1].max - getStep()">+</button>
+              <button class="btn btn-primary" (click)="increment()" [disabled]="(rangesData.length && number >= rangesData[rangesData.length - 1].max - getStep())">+</button>
             </div>
           </div>
         </div>
